corpus/cpp/template/case-13/snapshots/gcc13_14/single_sink_structured/render.debug.txt
error: [template] template instantiation failed @ src/main.cpp:6:5
help: start from the first user-owned template frame and match template arguments
raw : no matching function for call to 'expect_ptr(int&)'
| src/main.cpp:6:5
|     expect_ptr(value);
|     ^
while instantiating:
  - src/main.cpp:2:6 candidate 1: 'template<class T> void expect_ptr(T*)'
  - src/main.cpp:2:6 template argument deduction/substitution failed:
debug: rule_id=rule.family.template.structured_or_message
debug: matched_conditions=context=template_instantiation, child_note_kind=template_context, child_message_contains=template, child_message_contains=deduction/substitution, phase=instantiate
debug-facts: group_ref=group-419d6d5d1efa, role=independent_root, visibility_floor=never_hidden, episode_ref=episode-971133a6ed24
debug-facts: evidence_tags=actionability_short, early_invocation, specific_symbol_or_frontier, strong_root_family, user_owned_primary
debug-raw: provenance_capture_refs=diagnostics.sarif
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output